# agent-undo

./: .gitignore  Cargo.toml  README.md  RELEASING.md  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci.yml  pages.yml  release-npm.yml  release.yml
crates/undo-core/: Cargo.toml  README.md
crates/undo-core/src/: journal.rs
crates/undo-core/tests/: cli.rs
crates/undo-napi/: Cargo.toml  package-lock.json  package.json
crates/undo-napi/src/: lib.rs
crates/walkback-core/: Cargo.toml  README.md
crates/walkback-core/src/: journal.rs  lib.rs
crates/walkback-core/tests/: cli.rs  concurrency.rs  property.rs
crates/walkback-napi/: Cargo.toml  index.js  package.json
crates/walkback-napi/src/: lib.rs
demo/: demo.ts  mcp-smoke.ts
docs/: agent-instructions.md  index.html
packaging/: install.sh  undo.rb  walkback.rb
site/: .gitignore  astro.config.mjs  package-lock.json  package.json
site/src/components/: Hero.tsx
site/src/layouts/: Layout.astro
site/src/pages/: index.astro
site/src/styles/: global.css
src/: engine.ts  index.ts  mcp.ts
