[package]
name = "walkback-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Undo anything your AI agent does — a universal, reversible side-effect time machine with a CLI (`walkback`)."
homepage = "https://github.com/tathagat22/walkback"
documentation = "https://docs.rs/walkback-core"
readme = "README.md"
keywords = ["ai", "agents", "undo", "rollback", "cli"]
categories = ["command-line-utilities", "development-tools", "filesystem"]
rust-version = "1.74"

[lib]
name = "walkback_core"
path = "src/lib.rs"

[[bin]]
name = "walkback"
path = "src/bin/walkback.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
filetime.workspace = true
fs2.workspace = true
notify.workspace = true
ctrlc.workspace = true
similar.workspace = true
